--- a/index.html
+++ b/index.html
@@ -5,14 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+
+    <!-- NAV-BAR -->
+      <header>
+        <div>
+            <img class="spotify-logo" src="./images/spotify-logo.png" alt="Spotify Logo">
+          <nav>
+            <ul>
+              <li><a href="#"></a>Premium</li>
+              <li><a href="#"></a>Discover</li>
+              <li><a href="#"></a>Help</li>
+              <li><a href="#"></a>Download</li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+
+    <!-- section 1 -->
+    <section class="banner">
+      <div>
+        <h1>
+          Music for everyone.
+        </h1>
+        <p>
+          Spotify is now free on mobile, tablet and computer.<br>
+          Listen to the right music, wherever you are.
+        </p>
+    </div>
+    </section>
+
+    <!-- Section 2 -->
+    <section class="What’s-on-spotify-section">
+      <h2>What’s on Spotify?</h2>
+      <section>
+        <div class="millions-of-songs">
+          <img class="music-icon" src="images/music-icon.png" alt="Music Icon">
+          <h3>Millions of Songs</h3>
+          <p>There are millions of songs on Spotify</p>
+        </div>
+        <div class="HD-music">
+          <img class="high-quality-music" src="images/high-quality-icon.png" alt="High Quality Music Icon">
+          <h3>HD Music</h3>
+          <p>Listen to music as if you were listening live</p>
+        </div>
+        <div class="stream-everywhere">
+          <img class="devices" src="images/devices-icon.png" alt="Devices Icon">
+          <h3>Stream Everywhere</h3>
+          <p>Stream music on your smartphone, tablet or computer</p>
+        </div>
+      </section>
+    </section>
+
+    <!-- Section 3 -->
+    <section class="green-section">
+      <div>
+        <h4>It’s as yeezy as Kanye West.</h4>
+        <h5>Search</h5>
+        <p>Know what you want to listen to?<br>
+          Just search and hit play.</p>
+        <h5>Browse</h5>
+        <p>Check out the latest charts,<br>
+          brand new releases and great<br>
+          playlists for right now.
+        </p>
+        <h5>Discover</h5>
+        <p>Enjoy new music every Monday<br>
+          with your own personal playlist.<br>
+          Or sit back and enjoy Radio.</p>
+      </div>
+      <img class="spotify-icon" src="images/spotify-icon-white.png" alt=" White Spotify Icon">
+      <img class="spotify-app" src="images/spotify-app.jpg" alt="Spotify app">
+    </section>
+
   </body>
 </html>
